apps/platform/tinyauth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinyauth
  namespace: platform
  labels:
    app: tinyauth
spec:
  replicas: 0
  selector:
    matchLabels:
      app: tinyauth
  template:
    metadata:
      labels:
        app: tinyauth
    spec:
      containers:
        - name: tinyauth
          image: ghcr.io/steveiliop56/tinyauth:v5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: platform-tinyauth-data
