apps/platform/tinyauth/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tinyauth
  namespace: platform
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tinyauth.artr.com.br`)
      kind: Rule
      services:
        - name: tinyauth
          port: 3000
  tls:
    secretName: wildcard-artr-com-br-tls
